--- a/weather.css
+++ b/weather.css
@@ -3,7 +3,9 @@ body {
   background: #f0f4f8;
   margin: 0;
   padding: 20px;
-  background-image: url('weather-pic.jpg');
+  background-image: url(paul-volkmer-fX-qWsXl5x8-unsplash.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .weather-app {
@@ -23,12 +25,14 @@ body {
 input {
   padding: 10px;
   font-size: 16px;
+  border-radius: 25px;
 }
 
 button {
   padding: 10px;
   font-size: 16px;
   cursor: pointer;
+  border-radius: 25px;
 }
 .button:active {
     border: 2px solid #66da4300;
