--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
   list-style: none;
   padding: 2rem 0;
   background-color: black;
+
 }
 
 .nav a:hover{
@@ -33,6 +34,7 @@ header {
 }
 
 .wrapper {
+  margin-top: 40px;
     position:relative;
     width: 100%;
     height: 100%;
